Make operations throw exceptions